# Pastebin

./: requirements.txt  test.db
src/: config.py  database.py  main.py  models.py  schemas.py
src/C++/: CMakeLists.txt  hashlib.cpp
src/static/css/: form.css  note.css
src/templates/: form.html  link.html
